--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "syncroom-korea",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -13,7 +14,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
-    "axios": "^1.5.1",
+    "axios": "^1.6.3",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.1",
     "clsx": "^2.1.0",
@@ -57,7 +58,7 @@
     "prettier": "^3.0.3",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.2.2",
-    "vite": "^4.4.11",
+    "vite": "^5.0.10",
     "vite-plugin-svgr": "^4.1.0",
     "vite-tsconfig-paths": "^4.2.1"
   },
